# Laplacien

./: #CMakeLists.txt#  #main.cpp#  .#CMakeLists.txt  .#main.cpp  .gitmodules  CMakeLists.txt  CMakeLists.txt~  build.sh  configure.sh  debug.sh  debug.sh~  main.cpp  main.cpp~  mesh.cpp  mesh.cpp~  mesh.h  mesh.h~  readme.md  run.sh  run.sh~  wrongmesh.pos  wrongparam.pos
OperatorBuilds/: CMakeLists.txt  operatorbuilds.cpp  operatorbuilds.hpp
mesh/: CMakeLists.txt  CMakeLists.txt~  disk.geo  disk.geo~  disk.msh  mesh.cpp  mesh.cpp~  mesh.hpp  mesh.hpp~  pipeline_step.geo  pipeline_step.geo~  pipeline_step.msh  square.geo  square.geo~  square.msh
